# Leonardo-Da-VQGAN

./: LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml
.github/workflows/: exp.yml
config/: custom_vqgan.yaml
flask-demo-server/: Dockerfile  docker-compose.yml  main.py
flask-demo-server/static/: index.html
flask-demo-server/template/: result.html
leonardo_da_vqgan/data/datasets/: pokemon.py
leonardo_da_vqgan/loss/: lpips.py  vqperceptual.py
leonardo_da_vqgan/models/: diffusion_models.py  quantize.py  vqgan.py
leonardo_da_vqgan/models/clip/: clip.py  model.py  requirements.txt  simple_tokenizer.py
leonardo_da_vqgan/modules/discriminator/: model.py
leonardo_da_vqgan/pl/: lightning_module.py
leonardo_da_vqgan/utils/: utils.py
scripts/: playground.py  test.py  test_vqgan.py  train.py  train_vqgan.py
